--- a/auth.html
+++ b/auth.html
@@ -1,28 +1,13 @@
-<div class="auth-container">
-    <div class="auth-tabs">
-      <button class="auth-tab active" data-tab="login">Login</button>
-      <button class="auth-tab" data-tab="register">Register</button>
-    </div>
-    
-    <div id="login-tab" class="auth-content active">
-      <form id="loginForm">
-        <input type="email" id="loginEmail" placeholder="Email" required>
-        <input type="password" id="loginPassword" placeholder="Password" required>
-        <button type="submit">Login</button>
-      </form>
-    </div>
-    
-    <div id="register-tab" class="auth-content">
-      <form id="registerForm">
-        <input type="email" id="registerEmail" placeholder="Email" required>
-        <input type="password" id="registerPassword" placeholder="Password" required>
-        <select id="registerTeam" required>
-          <option value="">Select Team</option>
-          <!-- Will be populated from database -->
-        </select>
-        <button type="submit">Register</button>
-      </form>
-    </div>
-  </div>
-  
-  <script src="js/auth.js"></script>
+// Replace with your actual config
+
+const firebaseConfig = {
+  apiKey: "AIzaSyDaHHjMdchgRKCq-xDTzT2p1-WBP8KI9h4",
+  authDomain: "ipl-auction-game-89635.firebaseapp.com",
+  databaseURL: "https://ipl-auction-game-89635-default-rtdb.firebaseio.com",
+  projectId: "ipl-auction-game-89635",
+  storageBucket: "ipl-auction-game-89635.firebasestorage.app",
+  messagingSenderId: "1068660815248",
+  appId: "1:1068660815248:web:29f41524ab94c7de952f15",
+};
+
+firebase.initializeApp(firebaseConfig);
