--- a/auth.html
+++ b/auth.html
@@ -1,5 +1,3 @@
-// Replace with your actual config
-
 const firebaseConfig = {
   apiKey: "AIzaSyDaHHjMdchgRKCq-xDTzT2p1-WBP8KI9h4",
   authDomain: "ipl-auction-game-89635.firebaseapp.com",
@@ -8,6 +6,6 @@ const firebaseConfig = {
   storageBucket: "ipl-auction-game-89635.firebasestorage.app",
   messagingSenderId: "1068660815248",
   appId: "1:1068660815248:web:29f41524ab94c7de952f15",
+  measurementId: "G-BNJZMTCGVT"
 };
-
 firebase.initializeApp(firebaseConfig);
