--- a/index.html
+++ b/index.html
@@ -3,6 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IPL Auction 2024</title>
+    <!-- Add these scripts in HEAD -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    <link href="css/styles.css" rel="stylesheet">
+</head>
+<body>
+    <div id="app">
+        <header>
+            <h1>IPL Auction 2024</h1>
+            <nav>
+                <a href="bidding.html">Live Bidding</a>
+                <a href="admin.html">Admin</a>
+                <a href="auth.html">Login</a>
+            </nav>
+        </header>
+        
+        <main>
+            <section class="hero">
+                <h2>Welcome to IPL Player Auction</h2>
+                <a href="bidding.html" class="cta-button">Enter Auction Room</a>
+            </section>
+        </main>
+    </div>
+
+    <!-- Initialize Firebase -->
+    <script src="js/firebase-config.js"></script>
+    <script>
+        // Redirect to bidding page if logged in
+        firebase.auth().onAuthStateChanged((user) => {
+            if (user) window.location.href = 'bidding.html';
+        });
+    </script>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IPL 2024 Auction | Live Player Bidding</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
